--- a/back/package.json
+++ b/back/package.json
@@ -13,8 +13,12 @@
   "license": "ISC",
   "dependencies": {
     "apollo-server": "^3.12.1",
+    "dotenv": "^16.4.1",
     "express": "^4.18.2",
-    "graphql": "^16.8.1"
+    "graphql": "^16.8.1",
+    "mysql2": "^3.9.1",
+    "sequelize": "^6.36.0",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.3"
